fixed z-index on filter

--- a/version_control/Codurance_September2020/css/modules/filtered-clients.css
+++ b/version_control/Codurance_September2020/css/modules/filtered-clients.css
@@ -31,7 +31,7 @@
 
 .clients__filter {
     position: absolute;
-    z-index: 1;
+    z-index: 2;
 }
 {% call utils.medium_large_and_extra_large()%}
     .clients__filter {
